log
Wed 08 May 2024 12:55:29 AM UTC: 
 tests:  1|8
total_score: 0/70
7e5b78c
Wed 08 May 2024 12:57:04 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
df78593
Wed 08 May 2024 01:00:34 AM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4912a41
Wed 08 May 2024 01:00:51 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
f35ed74
Wed 08 May 2024 01:06:18 AM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++----------
 1 file changed, 28 insertions(+), 10 deletions(-)
 tests:  5|7
total_score: 5/70
a25717e
